.k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hosts
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  tls:
    - hosts:
        - partners.jailtonjunior.site
        - address.jailtonjunior.site
      secretName: partner-api-tls
  rules:
    - host: address.jailtonjunior.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: address-api-service
                port:
                  number: 80
    - host: partners.jailtonjunior.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: partner-api-service
                port:
                  number: 80
